--- a/src/pages/Header/header.css
+++ b/src/pages/Header/header.css
@@ -7,7 +7,7 @@ header{
     padding-right: 100px;
     width: auto;
     height: 80px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #00000080;
     border-radius: 15px;
 }
 .logo{
@@ -32,7 +32,8 @@ header{
     background-color: rgba(255, 255, 255, 0);
     padding: 5px 14px;
     color:rgb(255, 255, 255);
-    border-radius: 4px;
+    border-radius: 10px;
+    border: solid white;
 }
 .funcionario{
     text-decoration: none;
@@ -43,8 +44,9 @@ header{
     border-radius: 4px;
 }
 .imgLogo {
-    width: 90%;
-    height: 80px;
+    width: 100%;
+    margin-top: 25px;
+    height: 120px;
 }
 .login {
     text-decoration: none;
