--- a/src/components/agendamentoForm.css
+++ b/src/components/agendamentoForm.css
@@ -5,27 +5,29 @@
     padding: 20px; /* Espaçamento interno do contêiner */
     border: 1px solid #ccc; /* Borda sólida com cor cinza */
     border-radius: 8px; /* Borda arredondada */
-  }
-  
-  /* Estilo para o grupo de formulário */
-  .form-group {
+}
+
+/* Estilo para o grupo de formulário */
+.form-group {
     margin: 0 auto; /* Centraliza o grupo de formulário na página */
     margin-bottom: 30px;
-  }
-  
-  /* Estilo para os campos de entrada de texto */
-  .form-group input[type="text"],
-  .form-group input[type="email"],
-  .form-group input[type="password"] {
+}
+
+/* Estilo para os campos de entrada de texto, telefone, email e data/hora */
+.form-group input[type="text"],
+.form-group input[type="email"],
+.form-group input[type="tel"],
+.form-group input[type="date"],
+.form-group input[type="time"] {
     width: 95%; /* Largura total do campo de entrada */
-    margin-bottom: 20px; /* Aumentado para espaçamento inferior */
+    margin-bottom: 20px; /* Espaçamento inferior */
     padding: 10px; /* Espaçamento interno do campo */
     border: 1px solid #ccc; /* Borda sólida com cor cinza */
     border-radius: 4px; /* Borda arredondada */
-  }
-  
-  /* Estilo para o botão de envio */
-  .form-group button {
+}
+
+/* Estilo para o botão de envio */
+.form-group button {
     width: 100%; /* Largura total do botão */
     padding: 10px; /* Espaçamento interno do botão */
     background-color: #ff7b00; /* Cor de fundo laranja */
@@ -33,20 +35,14 @@
     border: none; /* Sem borda */
     border-radius: 4px; /* Borda arredondada */
     cursor: pointer; /* Cursor de ponteiro ao passar por cima */
-  }
-  
-  .form-group button:hover {
+}
+
+.form-group button:hover {
     background-color: #ffa149; /* Cor do botão ao passar o mouse */
-  }
-  
-  /* Estilo para mensagens de erro */
-  .error {
+}
+
+/* Estilo para mensagens de erro */
+.error {
     color: red; /* Cor do texto vermelho */
     font-size: 12px; /* Tamanho da fonte das mensagens de erro */
-  }
-  
-  /* Estilo para o link de esqueceu a senha (se houver) */
-  .form-group .forgot-password {
-    text-align: right; /* Alinha o texto à direita */
-  }
-  
+}
