--- a/src/pages/Header/header.css
+++ b/src/pages/Header/header.css
@@ -6,18 +6,11 @@ header{
     padding-left: 100px;
     padding-right: 100px;
     width: auto;
-    height: 80px;
+    height: 90px;
     background-color: #00000080;
-    border-radius: 15px;
 }
-.logo{
-    text-decoration: none;
-    font-size: 30px;
-    cursor: pointer;
-    color: white;
-    font-weight: bold;
-}
-.usuario{
+
+.agenda{
     text-decoration: none;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
@@ -26,7 +19,8 @@ header{
     border-radius: 10px;
     border: solid white;
 }
-.lista{
+
+.lista-funcionario{
     text-decoration: none;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
@@ -35,24 +29,19 @@ header{
     border-radius: 10px;
     border: solid white;
 }
-.funcionario{
+
+.formulario{
     text-decoration: none;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
     padding: 5px 14px;
     color:rgb(255, 255, 255);
-    border-radius: 4px;
+    border-radius: 10px;
+    border: solid white;
 }
+
 .imgLogo {
     width: 100%;
     margin-top: 25px;
     height: 120px;
-}
-.login {
-    text-decoration: none;
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0);
-    padding: 5px 14px;
-    color:rgb(255, 255, 255);
-    border-radius: 4px;
 }
