Removendo os comentários

--- a/src/components/agendamentoForm.css
+++ b/src/components/agendamentoForm.css
@@ -1,48 +1,44 @@
 .app-container {
-    max-width: 400px; /* Largura máxima do contêiner */
-    margin: 0 auto; /* Centraliza o contêiner na página */
+    max-width: 400px;
+    margin: 0 auto;
     margin-top: 50px;
-    padding: 20px; /* Espaçamento interno do contêiner */
-    border: 1px solid #ccc; /* Borda sólida com cor cinza */
-    border-radius: 8px; /* Borda arredondada */
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
 }
 
-/* Estilo para o grupo de formulário */
 .form-group {
-    margin: 0 auto; /* Centraliza o grupo de formulário na página */
+    margin: 0 auto;
     margin-bottom: 30px;
 }
 
-/* Estilo para os campos de entrada de texto, telefone, email e data/hora */
 .form-group input[type="text"],
 .form-group input[type="email"],
 .form-group input[type="tel"],
 .form-group input[type="date"],
 .form-group input[type="time"] {
-    width: 95%; /* Largura total do campo de entrada */
-    margin-bottom: 20px; /* Espaçamento inferior */
-    padding: 10px; /* Espaçamento interno do campo */
-    border: 1px solid #ccc; /* Borda sólida com cor cinza */
-    border-radius: 4px; /* Borda arredondada */
+    width: 95%;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
-/* Estilo para o botão de envio */
 .form-group button {
-    width: 100%; /* Largura total do botão */
-    padding: 10px; /* Espaçamento interno do botão */
-    background-color: #ff7b00; /* Cor de fundo laranja */
-    color: #fff; /* Cor do texto branco */
-    border: none; /* Sem borda */
-    border-radius: 4px; /* Borda arredondada */
-    cursor: pointer; /* Cursor de ponteiro ao passar por cima */
+    width: 100%;
+    padding: 10px;
+    background-color: #ff7b00;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .form-group button:hover {
-    background-color: #ffa149; /* Cor do botão ao passar o mouse */
+    background-color: #ffa149;
 }
 
-/* Estilo para mensagens de erro */
 .error {
-    color: red; /* Cor do texto vermelho */
-    font-size: 12px; /* Tamanho da fonte das mensagens de erro */
+    color: red;
+    font-size: 12px;
 }
