--- a/src/components/listarAgendamentos.css
+++ b/src/components/listarAgendamentos.css
@@ -1,4 +1,3 @@
-/* Estilo para o link de novo agendamento */
 .cad-agenda {
   text-decoration: none;
   cursor: pointer;
@@ -7,15 +6,14 @@
   color: rgb(255, 255, 255);
   border-radius: 10px;
   border: solid white 2px;
-  transition: background-color 0.3s ease, color 0.3s ease; /* Transição suave */
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .cad-agenda:hover {
-  background-color: rgba(255, 255, 255, 0.1); /* Leve mudança de fundo ao passar o mouse */
-  color: rgb(230, 230, 230); /* Alteração na cor do texto ao passar o mouse */
+  background-color: rgba(255, 255, 255, 0.1);
+  color: rgb(230, 230, 230);
 }
 
-/* Estilo para o botão de confirmação */
 .delete-button {
   padding: 8px 12px;
   background-color: #a00202;
@@ -29,7 +27,6 @@
   background-color: #ff5549;
 }
 
-/* Estilo para o botão de edição */
 .edit-button {
   padding: 8px 12px;
   background-color: #0050a0;
@@ -43,14 +40,12 @@
   background-color: #3a8fd9;
 }
 
-/* Estilo geral do corpo da página */
 body {
   font-family: Arial, sans-serif;
   background-color: #f9f9f9;
   margin: 0;
 }
 
-/* Estilo do container da lista */
 .list-container {
   max-width: 2000px;
   margin-top: 25px;
@@ -60,13 +55,11 @@ body {
   border-radius: 14px;
 }
 
-/* Estilos para a lista */
 ul {
   list-style-type: none;
   padding: 0;
 }
 
-/* Estilo para os itens da lista */
 li {
   padding: 10px;
   margin: 5px 0;
@@ -76,12 +69,10 @@ li {
   transition: background-color 0.3s ease;
 }
 
-/* Estilo ao passar o mouse sobre um item da lista */
 li:hover {
   background-color: #626262;
 }
 
-/* Estilo para mensagens de carregamento e erro */
 .message {
   text-align: center;
   color: #666;
@@ -91,7 +82,6 @@ li:hover {
   color: #d40700;
 }
 
-/* Botões de confirmação de exclusão */
 .confirm-button, .cancel-button {
   padding: 8px 12px;
   margin: 5px;
@@ -118,4 +108,3 @@ li:hover {
 .cancel-button:hover {
   background-color: #c82333;
 }
- 
