--- a/src/pages/Agenda/agenda.css
+++ b/src/pages/Agenda/agenda.css
@@ -1,86 +1,77 @@
-.cad-agenda{
+.cad-agenda {
   text-decoration: none;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0);
   padding: 5px 14px;
-  color:rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   border-radius: 10px;
   border: solid white;
 }
 
-/* Estilo para o botão de confirmação */
 .delete-button {
-    padding: 8px 12px; /* Espaçamento interno do botão */
-    background-color: #a00202; /* Cor de fundo */
-    color: #fff; /* Cor do texto */
-    border-radius: 4px; /* Borda arredondada */
-    cursor: pointer; /* Cursor de ponteiro */
-    transition: background-color 0.3s ease; /* Transição suave */
-  }
-  
-  .delete-button:hover {
-    background-color: #ff5549; /* Cor ao passar o mouse */
-  }
-  
-  /* Estilo para o botão de edição */
-  .edit-button {
-    padding: 8px 12px; /* Espaçamento interno do botão */
-    background-color: #0050a0; /* Cor de fundo azul */
-    color: #fff; /* Cor do texto */
-    border-radius: 4px; /* Borda arredondada */
-    cursor: pointer; /* Cursor de ponteiro */
-    transition: background-color 0.3s ease; /* Transição suave */
-  }
-  
-  .edit-button:hover {
-    background-color: #3a8fd9; /* Cor ao passar o mouse */
-  }
-  
-  /* Estilos gerais */
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    margin: 0;
-  }
-  
-  /* Estilos para o container da lista */
-  .list-container {
-    max-width: 2000px;
-    margin-top: 25px;
-    padding: 20px;
-    background-color: #525252;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 14px;
-  }
-  
-  /* Estilos para a lista */
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  /* Estilos para os itens da lista */
-  li {
-    padding: 10px;
-    margin: 5px 0;
-    background-color: #525252;
-    border: 1px solid #000000;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-  }
-  
-  /* Estilo ao passar o mouse sobre um item da lista */
-  li:hover {
-    background-color: #525252;
-  }
-  
-  /* Estilo para mensagens de carregamento e erro */
-  .message {
-    text-align: center;
-    color: #666;
-  }
-  
-  .message.error {
-    color: #d40700;
-  }
-  
+  padding: 8px 12px;
+  background-color: #a00202;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-button:hover {
+  background-color: #ff5549;
+}
+
+.edit-button {
+  padding: 8px 12px;
+  background-color: #0050a0;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.edit-button:hover {
+  background-color: #3a8fd9;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+  margin: 0;
+}
+
+.list-container {
+  max-width: 2000px;
+  margin-top: 25px;
+  padding: 20px;
+  background-color: #525252;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 14px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 10px;
+  margin: 5px 0;
+  background-color: #525252;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+li:hover {
+  background-color: #525252;
+}
+
+.message {
+  text-align: center;
+  color: #666;
+}
+
+.message.error {
+  color: #d40700;
+}
